# doml_parser

./: Dockerfile  README.md  load.py  pyproject.toml  requirements.txt
doml_parser/: __init__.py  __main__.py  _yaml_structure_schemas.py  errors.py
doml_parser/model/: capability.py  data.py  data_type.py  doml_model.py  edge.py  interface.py  metadata.py  node_template.py  node_type.py  ntpl_property.py  output.py  property_def.py  provider.py  rmdf_model.py  types.py
doml_parser/model/_unresolved/: resolver.py  unres_capability.py  unres_checker.py  unres_data.py  unres_data_type.py  unres_doml_model.py  unres_edge.py  unres_interface.py  unres_metadata.py  unres_model.py  unres_node_template.py  unres_node_type.py  unres_ntpl_property.py  unres_output.py  unres_property_def.py  unres_provider.py  unres_rmdf_model.py  unres_types.py
tests/: test_dict_verification.py  test_doml_parser.py  test_unres_construction.py  utils.py
tests/examples/doml/piacere/examples/docker/: azure.doml
tests/examples/doml/piacere/examples/spark/: hadoop.doml  spark.doml
tests/examples/doml/piacere/examples/wordpress/: aws.doml  azure.doml  gcp.doml
tests/examples/piacere/: application.rmdf  network.rmdf
tests/examples/piacere/provider/aws/modules/: application.rmdf  cloud.rmdf  compute.rmdf  network.rmdf
tests/examples/piacere/provider/aws/resources/: ec2.rmdf
tests/examples/piacere/provider/azure/modules/: cloud.rmdf  compute.rmdf  docker.rmdf  network.rmdf  storage.rmdf
tests/examples/piacere/provider/azure/resources/: compute.rmdf  network.rmdf  storage.rmdf
(+4 files in other folders)
